--- a/instagram-app/src/App.css
+++ b/instagram-app/src/App.css
@@ -1,12 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
