--- a/instagram-app/src/components/CommentSection/CommentSection.css
+++ b/instagram-app/src/components/CommentSection/CommentSection.css
@@ -27,3 +27,10 @@
 .single-text {
   font-size: 14px;
 }
+
+.add-comment {
+  width: 100%;
+  border: none;
+  font-size: 14px;
+  border-top: 1px solid lightgray;
+}
